# wasmati

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  compile.sh  ubsan.blacklist
matplotlib-charts/: charts.py  polybench-wasmati-v-wassail.csv  requirements.txt  wasmati-exec-agg.csv  wasmati-master.csv  wasmati-spec.csv
neo4j-custom-docker/: Dockerfile  README.md  docker-entrypoint.sh  import.sh  run_all.sh  run_neo4j.sh  run_queries.sh
neo4j-custom-docker/custom-plugin/: LICENSE  README.adoc  pom.xml
neo4j-custom-docker/execution-results/SHELL_01_read_secret_local_min/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  malloc_bo_time.txt  static_bo_time.txt  taint_ff_time.txt  taint_indirect_result.csv  taint_indirect_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/abo6_min/: danFunc_result.csv  danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  malloc_bo_time.txt  static_bo_time.txt  taint_ff_time.txt  taint_indirect_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/abo8_in/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  loops_bo_time.txt  malloc_bo_time.txt  static_bo_time.txt  taint_ff_time.txt  taint_indirect_time.txt  taint_lf_result.csv  taint_lf_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/bo1_min/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  loops_bo_time.txt  malloc_bo_time.txt  static_bo_result.csv  static_bo_time.txt  taint_ff_time.txt  taint_indirect_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/bo3_min/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  malloc_bo_result.csv  malloc_bo_time.txt  static_bo_time.txt  taint_ff_time.txt  taint_indirect_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/canary_down_min/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  malloc_bo_time.txt  static_bo_result.csv  static_bo_time.txt  taint_ff_time.txt  taint_indirect_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/df1_min/: danFunc_time.txt  df_result.csv  df_time.txt  fs_time.txt  import_time.txt  malloc_bo_time.txt  static_bo_time.txt  taint_ff_time.txt  taint_indirect_time.txt  uaf_result.csv  uaf_time.txt
neo4j-custom-docker/execution-results/e1_min/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  malloc_bo_time.txt  static_bo_time.txt  taint_ff_time.txt  taint_indirect_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/foo_min/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  malloc_bo_time.txt  static_bo_time.txt  taint_ff_result.csv  taint_ff_time.txt  taint_indirect_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/pnm2png_min/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  loops_bo_result.csv  loops_bo_time.txt  malloc_bo_time.txt  static_bo_time.txt  taint_ff_time.txt  taint_indirect_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/sg1/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  loops_bo_time.txt  malloc_bo_time.txt  static_bo_time.txt  taint_ff_time.txt  taint_indirect_time.txt  taint_lf_result.csv  taint_lf_time.txt  uaf_time.txt
neo4j-custom-docker/execution-results/sg2/: danFunc_time.txt  df_time.txt  fs_time.txt  import_time.txt  loops_bo_time.txt  malloc_bo_time.txt  static_bo_time.txt  taint_ff_time.txt  (+3 more)
neo4j-custom-docker/import-files/: edge.csv  edge_headers.csv  node.csv  node_headers.csv
neo4j-custom-docker/local-package/: neo4jlabs-plugins.json
neo4j-custom-docker/neo4j_queries/: danFunc.cypher  danFunc.py  defaultConfigs.json  df.cypher  df.py  fs.cypher  fs.py  loops_bo.cypher  loops_bo.py  malloc_bo.cypher  malloc_bo.py  static_bo.cypher  static_bo.py  taint_ff.cypher  taint_ff.py  taint_indirect.cypher  taint_indirect.py  taint_lf.py  uaf.cypher  uaf.py
src/: ast-builder.cc  ast-builder.h  ast-writer.cc  ast-writer.h  cfg-builder.cc  cfg-builder.h  cfg-visitor.cc  cfg-visitor.h  csv-writer.h  datalog-facts-writer.cc  datalog-facts-writer.h  datalog-writer.cc  datalog-writer.h  dot-writer.cc  dot-writer.h  graph-visitor.cc  graph-visitor.h  graph.cc  graph.h  options.cc  options.h  pdg-builder.cc  pdg-builder.h  pdg-visitor.cc  pdg-visitor.h  query.cc  query.h  utils.h  vulns.cc  vulns.h
src/config/: config.cc  config.h.in  defaultConfig.json  enums.def  predicates.def
src/interpreter/: evaluator.cc  evaluator.h  functions.h  interpreter.cc  interpreter.h  nodes.cc  nodes.h  parser.y  scanner.h  scanner.l  symbol-table.h  y.tab.h
src/queries/: boBuffsStatic.cc  boBuffsStaticMalloc.cc  boLoops.cc  boMemcpy.cc  boScanfLoops.cc  bufferSizes.cc  dangerousFunctions.cc  doubleFree.cc  formatStrings.cc  isTainted.cc  queries.def  taintedCallIndirect.cc  taintedFuncToFunc.cc  taintedLocalToFunc.cc  unreachable.cc  useAfterFree.cc  verifyMallocConst.cc
src/readers/: csv-reader.h
src/tools/: wasm2ast.cc  wasm2cpg.cc  wasmati-query.cc  wasmati.cc  wat2ast.cc  wat2cpg.cc
src/writers/: csv-writer.h  datalog-writer.h  dot-writer.h  json-writer.h
tests/: br-table-nofold.wat  if-condition.wat  if-then-unr-else-unr.wat  if-then-unr-else.wat  if-then-unr.wat  loop-br.wat  loop-infinite.wat  pdg-test.wat
tests/c/: insecureArgs.c  library.js  mem_leak.c  printf.c  sink.c  trunc.c  uaf.c  unreach.c  vulns.txt
tests/wat/: add.wat  br-b4-if.wat  br-block.wat  br-if-add.wat  br-table-nobr.wat  br-table.wat  call-defined-later.wat  call-dependencies.wat  call-if.wat  call.wat  callimport-named.wat  callimport.wat  callindirect-1func-1type.wat  callindirect-2func-1types.wat  callindirect-2func-2type.wat  callindirect-if.wat  callindirect-named.wat  callindirect.wat  expr_br_if.wat  grow-size-memory.wat  if-condition-brif.wat  if-then-else-br-2.wat  if-then-else.wat  if-then-unr-else.wat  if-then-unr.wat  loop-block-return.wat  loop-br.wat  loop-if-else-end.wat  loop-if-end.wat  multi.wat  pdg-test-call.wat  pdg-test-loop-inside.wat  pdg-test-loop.wat  unreach-b4-instruct.wat
(+62 files in other folders)
